syntax = "proto3";

service DoctorService {
  rpc CreateDoctor (DoctorRes) returns (Doctor);
  rpc GetDoctor (IdRes) returns (Doctor);
  rpc ListDoctors (Empty) returns (DoctorList);
  rpc UpdateDoctor (UpdateDoctorRes) returns (Doctor);
  rpc RemoveDoctor (IdRes) returns (Empty);
}

message Doctor {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string create_date = 4; 
  string update_date = 5; 
}

message DoctorRes {
  string name = 2;
  string email = 3; 
}

message IdRes {
  int32 id = 1;
}

message UpdateDoctorRes {
  int32 id = 1;
  DoctorRes data = 2;
}

message DoctorList {
  repeated Doctor doctors = 1;
}

message Empty {}
